syntax = "proto3";
option go_package = "../services";

service hello{
    rpc SayHello(HelloReq) returns (HelloRes){};
}

message HelloReq{
    string name = 1;
}

message HelloRes{
    string msg = 1;
}